--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,40 @@
 .displayOff{
 	display: none;
 }
+
+#ConsoleTitle{
+	height: 250px;
+	width: 300px;
+	font-size: 30px;
+	position: absolute;
+	right: +10px;
+	top: 0px;
+	margin-right: auto;
+	margin-left: auto;
+}
+#SideConsole{
+	height: 250px;
+	width: 300px;
+	border: 1px solid white;
+	overflow: scroll;
+}
+
+.logMsg{
+	font-size: 14px;
+	font-style: Helvetica;
+	border-bottom: 1px dashed #5C5C5C;
+	margin-top:2px;
+	margin-bottom: 2px;
+	padding-bottom: 2px;
+	z-index: +1;
+}
+
+#buttonDesc{
+	height: 250px;
+	width: 200px;
+	position: absolute;
+	left: +550px;
+	top: 0px;
+	margin-right: auto;
+	margin-left: auto;
+}
